======================
 MDAnalysis CHANGELOG
======================

The rules for this file:
  * entries are sorted newest-first.
  * summarize sets of changes - dont reproduce every subversion log comment here.
  * don't ever delete anything.
  * keep the format consistent (79 char width, M/D/Y date format).

------------------------------------------------------------------------------
??/??/10 
        (Running list of enhancements, to be edited for final
        entry when stable changes are merged back into trunk)

	* 0.6.4-devel
	* GRO writer added
	* fixed XTC writer (Issue 38)
	* convert box representations (Issue 37)
	* primitive PDB parser added (slightly faster and ignores
	  correctness of resids, atomnames etc but reads CRYST1 into unitcell)
	* Universe gained the 'permissive' flag to switch on the
	  primitive PDB parser/reader

        * reads hydrogen bond donor/acceptor list from psf and sets up
          structures for hydrogen bonding analysis TODO: H-BOND
          ANALYSIS NOT WORKING YET

07/08/10 orbeckst, denniej0, danny.parton, philipwfowler
	* 0.6.3 release
        * minimum requirement is python 2.4 (using with_statement in the
          analysis module and we have not tested on 2.3 in a while)
        * analysis modules (MDAnalysis.analysis):
          - lipid bilayer leaflet detection
          - native contact analysis ("q1-q2")
	  - rms-fitting based on sequence alignment
        * write selections for other codes from AtomGroups (VMD, pymol, CHARMM,
          Gromacs ndx)
        * gro reader (Issue 31)
	* better API for loading a topology and a coordinate file in Universe()
        * trajectory reader: DCDReader can reverse trajectory with negative
          step increment; XTC/TRRReader can do simple (forward) slices by doing
          (slow!) sequential iteration
        * deprecated principleAxes() and introduced principalAxes() with less
          confusing return values (Issue 33).