@@ -17,9 +17,13 @@ Derive other Reader and Writer classes from the classes in this module.
    :members:
 """
 
+import itertools
+import os.path
 import numpy
 import MDAnalysis.core
 from MDAnalysis.core import units, flags
+from MDAnalysis.core.util import iterable, asiterable
+import core
 
 class Timestep(object):
     """Timestep data for one frame
@@ -186,6 +190,153 @@ class Reader(IObase):
     def __repr__(self):
         return "< %s %r with %d frames of %d atoms (%d fixed) >" % \
             (self.__class__.__name__, self.filename, self.numframes, self.numatoms, self.fixed)
+
+class ChainReader(Reader):
+    """Reader that concatenates multiple trajectories on the fly.
+
+    - indexing not implemented yet
+
+    - Trajectory API attributes exist but most of them only reflect
+      the first trajectory in the list; :attr:`ChainReader.numframes`,
+      :attr:`ChainReader.numatoms`, and :attr:`ChainReader.fixed` are
+      properly set, though
+    """    
+    format = 'CHAIN'
+
+    def __init__(self, filenames, **kwargs):
+        self.filenames = asiterable(filenames)
+        self.readers = [core.init_reader_for(filename, **kwargs) for filename in self.filenames]
+        self.__active_reader_index = 0   # pointer to "active" trajectory index into self.readers
+
+        self.skip = kwargs.get('skip', 1)
+        self.numatoms = self._get_same('numatoms')
+        self.fixed = self._get_same('fixed')
+
+        # build a map of frames (idealy use a tree structure?)
+        # need to solve: virtual frame k --> (traj_index, traj_frame)
+        # could use a big lookup table :-p ... not really
+        # 1. store first k0 and last kN for each trajectory {i: [k0, kN]}
+        #    (can be a  table for easier search
+        #    (the i-th trajectory contains kN-k0+1 frames)
+        # 2. for given k, search through list and find the block (=index) bracketing k
+        # 3. k -->  k - k0
+        #
+        # NOT IMPLEMENTED YET
+
+        # build map
+        numframes = self._get('numframes')
+        self.numframes = numpy.sum(numframes)
+
+        #: source for trajectories frame (fakes trajectory)
+        self.__chained_trajectories_iter = None
+
+        # make sure that iteration always yields frame 1
+        # rewind(0 also sets self.ts
+        self.ts = None
+        self.rewind()
+
+    # methods that can change with the current reader
+    def convert_time_from_native(self, t):
+        return self.active_reader.convert_time_from_native(t)
+    def convert_time_to_native(self, t):
+        return self.active_reader.convert_time_to_native(t)
+    def convert_pos_from_native(self, x):
+        return self.active_reader.convert_from_native(x)
+    def convert_pos_to_native(self, x):
+        return self.active_reader.convert_pos_to_native(x)
+
+    # attributes that can change with the current reader
+    @property
+    def filename(self):
+        return self.active_reader.filename
+    @property
+    def skip_timestep(self):
+        return self.active_reader.skip_timestep
+    @property
+    def delta(self):
+        self.active_reader.delta
+    @property
+    def periodic(self):
+        return self.active_reader.periodic
+    @property
+    def units(self):
+        return self.active_reader.units
+    @property
+    def compressed(self):
+        try:
+            return self.active_reader.compressed
+        except AttributeError:
+            return None
+
+
+    def _apply(self, method, **kwargs):
+        """Execute *method* with *kwargs* for all readers."""
+        return [reader.__getattribute__(method)(**kwargs) for reader in self.readers]
+
+    def _get(self, attr):
+        """Execute *method* with *kwargs* for all readers."""
+        return [reader.__getattribute__(attr) for reader in self.readers]    
+
+    def _get_same(self, attr):
+        """Verify that *attr* has the same value for all readers and return value.
+
+        :Arguments: *attr* attribute name
+        :Returns: common value of the attribute
+        :Raises: :Exc:`ValueError` if not all readers have the same value
+        """
+        values = numpy.array(self._get(attr))
+        value = values[0]
+        if not numpy.all(values == value):
+            bad_traj = numpy.array(self.filenames)[values != value]
+            raise ValueError("The following trajectories do not have the correct %s "
+                             " (%d):\n%r" % (attr, value, bad_traj))
+        return value
+
+    @property
+    def active_reader(self):
+        """Reader instance from which frames are being read."""
+        return self.readers[self.__active_reader_index]
+
+    def _chained_iterator(self):
+        """Core method that generates the chained trajectory."""
+        # TODO: maybe update active_reader, but no idea how
+        self._rewind()  # must rewind all readers
+        readers = itertools.chain(*self.readers)
+        for frame, ts in enumerate(readers):
+            ts.frame = frame+1  # fake continuous frames, 1-based
+            self.ts = ts
+            yield ts
+            
+    def _read_next_timestep(self, ts=None):
+        self.ts = self.__chained_trajectories_iter.next()
+        return self.ts
+
+    def rewind(self):
+        """Set current frame to the beginning."""
+        self._rewind()
+        self.__chained_trajectories_iter = self._chained_iterator()
+        self.ts = self.__chained_trajectories_iter.next()  # set time step to frame 1
+
+    def _rewind(self):
+        """Internal method: Rewind trajectories themselves and trj pointer."""
+        self._apply('rewind')
+        self.__active_reader_index = 0
+
+    def close_trajectory(self):
+        self._apply('close_trajectory')
+
+    def __iter__(self):
+        """Generator for all frames, starting at frame 1."""
+        self._rewind()
+        self.__chained_trajectories_iter = self._chained_iterator()  # start from first frame
+        for ts in self.__chained_trajectories_iter:
+            yield ts
+
+    def __repr__(self):
+        return "< %s %r with %d frames of %d atoms (%d fixed) >" % \
+            (self.__class__.__name__, 
+             [os.path.basename(fn) for fn in self.filenames], 
+             self.numframes, self.numatoms, self.fixed)
 
 
 
