@@ -450,6 +450,39 @@ def compute_correl_references():
     C.clear()
     return results
 
+class TestChainedReader(TestCase):
+    def setUp(self):
+        self.universe = mda.Universe(PSF, [DCD, DCD, DCD])
+        self.dcd = self.universe.trajectory
+        self.ts = self.universe.coord
+
+    def test_next_dcd(self):
+        self.dcd.rewind()
+        self.dcd.next()
+        assert_equal(self.ts.frame, 2, "loading frame 2")
+
+    def test_numatoms(self):
+        assert_equal(self.universe.trajectory.numatoms, 3341, "wrong number of atoms")
+
+    def test_numframes(self):
+        assert_equal(self.universe.trajectory.numframes, 3*98, "wrong number of frames in chained dcd")
+
+    def test_iteration(self):
+        for ts in self.dcd:
+            pass # just forward to last frame
+        assert_equal(self.dcd.numframes, ts.frame, 
+                     "iteration yielded wrong number of frames (%d), should be %d" \
+                         % (ts.frame, self.dcd.numframes))
+
+    @dec.knownfailureif(True, "indexing not implemented for chained reader")
+    def test_jump_lastframe_dcd(self):
+        self.dcd[-1]
+        assert_equal(self.ts.frame, self.dcd.numframes, "indexing last frame with dcd[-1]") 
+
+    @dec.knownfailureif(True, "slicing not implemented for chained reader")
+    def test_slice_dcd(self):
+        frames = [ts.frame for ts in self.dcd[5:17:3]]
+        assert_equal(frames, [6, 9, 12, 15], "slicing dcd [5:17:3]")
 
 class _GromacsReader(TestCase):
     filename = None
