@@ -9,7 +9,7 @@ The rules for this file:
   * keep the format consistent (79 char width, M/D/Y date format).
 
 ------------------------------------------------------------------------------
-??/??/10 
+??/??/10 orbeckst
         (Running list of enhancements, to be edited for final
         entry when stable changes are merged back into trunk)
 
@@ -21,7 +21,8 @@ The rules for this file:
 	  correctness of resids, atomnames etc but reads CRYST1 into unitcell)
 	* Universe gained the 'permissive' flag to switch on the
 	  primitive PDB parser/reader
-
+	* Simple 'chained reader' which enables a Universe to
+	  transparently read a list of trajectory files (Issue 39).
         * reads hydrogen bond donor/acceptor list from psf and sets up
           structures for hydrogen bonding analysis TODO: H-BOND
           ANALYSIS NOT WORKING YET
